# BatchScribe

./: # Left To Do's.md  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  TASKLIST.md  TODO.md  cli.py  config.py  engine.py  hook-torch.py  main.py  main.spec  mp3titler.py  pyproject.toml  requirements-gpu.txt  requirements.txt  vttmd.py  worker.py  writers.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: benchmark.py  build.md  update_deps.md
tests/: test_app_logic.py  test_batch_and_cache.py  test_cli.py  test_engine_fallback.py  test_fuzz.py  test_gui_smoke.py  test_new_features.py  test_smoke.py
